Layout problem fix

--- a/_sass/klise/_fonts.scss
+++ b/_sass/klise/_fonts.scss
@@ -98,9 +98,6 @@ body {
   font-size: $base-font-size;
   line-height: $base-line-height;
   color: $body-color;
-  max-width: $max-line-length;
-  margin: 0 auto;
-  padding: 1rem;
   word-wrap: break-word;
   -webkit-font-smoothing: antialiased;
 }
